--- a/src/components/ListItem/index.css
+++ b/src/components/ListItem/index.css
@@ -5,11 +5,11 @@
     justify-content: space-between;
     align-items: center;
     height: 50px;
-    margin: 10px;
+    margin: 15px 10px;
     text-align: center;
     line-height: 50px;
     font-size: 16px;
-    box-shadow: 0px 0px 0px #dbdbdb inset, 0 0 50px #5939db;
+    box-shadow: 0px 0px 0px #dbdbdb inset, 0 0 40px #5939db;
     border-radius: 8px;
     box-sizing: border-box;
 }
