--- a/src/Pagrs/Home/index.css
+++ b/src/Pagrs/Home/index.css
@@ -10,19 +10,21 @@ div {
 }
 
 .clock {
-    position: absolute;
-    left: 1%;
-    top: 1%;
+    position: fixed;
+    left: 50%;
+    top: 50%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     width: 300px;
-    height: 59px;
+    height: 60px;
+    margin-left: -730px;
+    margin-top: -420px;
     font-size: 24px;
     text-align: center;
     color: brown;
-    line-height: 59px;
+    line-height: 60px;
     text-shadow: 0 0 10px #FFA900, 0 0 20px #efb75f, 0 0 10px #efb75f, 0 0 10px #efb75f, 0 0 80px #efb75f;
 }
 
@@ -32,11 +34,13 @@ div {
 }
 
 .countdown {
-    position: absolute;
-    right: 1%;
-    top: 1%;
+    position: fixed;
+    left: 50%;
+    top: 50%;
     width: 300px;
     height: 60px;
+    margin-left: 430px;
+    margin-top: -420px;
     font-size: 26px;
     text-align: center;
     color: brown;
