--- a/src/components/FunctionButtons/index.css
+++ b/src/components/FunctionButtons/index.css
@@ -1,17 +1,11 @@
 .btnsContainer {
-    position: fixed;
-    left: 50%;
-    top: 50%;
+    position: relative;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    width: 70px;
-    height: 360px;
-    margin-top: -190px;
-    margin-left: 420px;
-    box-shadow: 0px 0px 0px #dbdbdb inset, 0 0 50px #5939db;
-    border-radius: 10px;
+    width: 300px;
+    height: 70px;
     box-sizing: border-box;
 }
 
