--- a/src/components/Pattern/index.css
+++ b/src/components/Pattern/index.css
@@ -1,7 +1,5 @@
 .pattern-container {
-    position: fixed;
-    left: 50%;
-    top: 50%;
+    position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -9,12 +7,8 @@
     align-items: center;
     align-content: space-around;
     width: 300px;
-    height: 200px;
-    margin-top: -100px;
-    margin-left: 520px;
-    box-shadow: 0px 0px 0px #dbdbdb inset, 0 0 50px #5939db;
+    height: 140px;
     text-align: center;
-    border-radius: 10px;
     box-sizing: border-box;
 }
 
